fixed size scaling issue for mobile, hide overflow.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,14 @@
 html {
-  font-size: 12px;
+  font-size: 16px;
 
   scroll-behavior: smooth;
 
-  @media (min-width:768px) {
+  @media (max-width:768px) {
     font-size: 14px;
   }
 
-  @media (min-width:1280px) {
-    font-size: 16px;
+  @media (max-width:500px) {
+    font-size: 12px;
   }
 }
 
