--- a/src/landingPage/BarAnimation.module.scss
+++ b/src/landingPage/BarAnimation.module.scss
@@ -50,7 +50,7 @@
 }
 @media screen and (max-width: 768px){
   .container {
-    top: 33vh;
+    top: 35vh;
     .barWrapper {
       height: 7%;
     }
